# agents

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
daman-arbiter/: Cargo.toml
daman-arbiter/src/: main.rs
daman-arc-fs/: Cargo.toml
daman-arc-fs/src/: addrs.rs  contracts.rs  credit_inbox.rs  factories.rs  handler.rs  hello.rs  lib.rs  main.rs  namespacing.rs  register.rs  specs.rs  state_snapshot.rs  tools.rs  tools_defs.rs
daman-chain-reader/: Cargo.toml
daman-chain-reader/src/: main.rs
daman-credit-policy/: Cargo.toml
daman-credit-policy/src/: lib.rs
daman-farcaster-poster/: Cargo.toml
daman-farcaster-poster/src/: main.rs
daman-operator/: Cargo.toml  README.md  install
daman-operator/src/: lib.rs  main.rs  specs.rs  tools.rs
daman-personas/: Cargo.toml  install
daman-personas/src/: lib.rs  main.rs  personas.rs  variant.rs
daman-recruiter/: Cargo.toml
daman-recruiter/src/: main.rs
daman-relief/: Cargo.toml
daman-relief/examples/: sign_loan.rs
daman-relief/src/: main.rs
daman-trace-pinner/: Cargo.toml
daman-trace-pinner/src/: main.rs
daman-underwriter/: Cargo.toml
daman-underwriter/src/: main.rs
daman-universe-keeper/: Cargo.toml
daman-universe-keeper/src/: main.rs
daman-watchdog/: Cargo.toml
daman-watchdog/src/: main.rs
docker/: Dockerfile.watchdog  entrypoint.sh
scripts/: humd.json.example  launch-swarm.sh  mint-persona-keys.sh  seed-bees.sh
tools/: farm-up.sh
tools/degradation-injector/: README.md  main.py  requirements.txt
