[workspace]
resolver = "2"
members = [
    "daman-watchdog",
    "daman-arbiter",
    "daman-farcaster-poster",
    "daman-recruiter",
    "daman-chain-reader",
    "daman-trace-pinner",
    "daman-universe-keeper",
    "daman-underwriter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
