[package]
name = "daman-arc-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Daman's Arc-chain forager, as a library. Persona binaries compose this with reverb-arc-fs::PersonaForagerBuilder + persona-base::AskerLoop into one self-contained forager process per persona. Each process owns exactly one EOA private key, one stable ed25519 hid, one namespaced tool surface — mirroring humfs's per-instance fs.roots scoping pattern. The 17 daman tool factories build closures that capture the per-bee signer + provider; there is no shared keyring and no per-call as_bee auth. Per https://reverbprotocol.github.io/protocol/OPERATING_MODEL and BRIEF_PERSONA_AS_FORAGER."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"
thiserror = "1"
reverb-arc-fs = { git = "https://github.com/reverbprotocol/protocol", branch = "main" }
daman-credit-policy = { path = "../daman-credit-policy" }
alloy = { version = "0.8", default-features = false, features = [
    "providers",
    "transport-http",
    "rpc-types-eth",
    "signers",
    "signer-local",
    "contract",
    "sol-types",
    "network",
    "reqwest-rustls-tls",
] }

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"
