[package]
name = "daman-credit-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared balance-aware credit policy for Daman bees: builds and signs EIP-712 LoanRequest payloads for the bust-bee p2p relief path. Bees import this crate to participate in the credit primitive without taking on alloy directly."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
alloy = { version = "0.8", default-features = false, features = [
    "providers",
    "transport-http",
    "rpc-types-eth",
    "signers",
    "signer-local",
    "contract",
    "sol-types",
    "network",
    "reqwest-rustls-tls",
] }
