[package]
name = "daman-farcaster-poster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Daman hub-poster forager bee: talks Farcaster Hub protocol directly with a local ed25519 signer, no Neynar SaaS. Crate name preserved for continuity; internal naming is daman-hub-poster."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = "2"
sha2 = "0.10"

[[bin]]
name = "daman-farcaster-poster"
path = "src/main.rs"
