[package]
name = "daman-underwriter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Daman underwriter bee: subscribes to register-leader-request, runs three on-chain-history checks via the chain-reader forager (no leverage signatures, no perp positions, spot-only volume above tier threshold), emits underwriter-decision with tier and required-bond fields. Stays narrow on policy."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }

[[bin]]
name = "daman-underwriter"
path = "src/main.rs"
